k3s/applications/bookstack/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstack
spec:
  replicas: 1

  strategy:
    type: Recreate

  selector:
    matchLabels:
      app: bookstack

  template:
    metadata:
      labels:
        app: bookstack

    spec:
      securityContext:
        fsGroup: 1001

      containers:
        - name: bookstack
          image: lscr.io/linuxserver/bookstack:latest
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
          ports:
            - containerPort: 80
          volumeMounts:
            - name: config
              mountPath: /config

      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: bookstack-config
