k3s/applications/bookstack/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookstack
  namespace: applications
spec:
  type: ClusterIP
  selector:
    app: bookstack
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
