k3s/applications/bookstack/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookstack
  namespace: applications
spec:
  ingressClassName: traefik
  rules:
    - host: wiki.tanello.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bookstack
                port:
                  number: 80
